// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a legend component 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
  data-theme="light"
>
  <ul
    class="legend-layer-list css-bhb3xr"
    data-theme="light"
    role="list"
  />
</div>
`;

exports[`should successfully show legend for Component configuration 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
  data-theme="light"
>
  <ul
    class="legend-layer-list css-bhb3xr"
    data-theme="light"
    role="list"
  >
    <li
      class="legend-item layer-layer-1 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          Layer 1
        </p>
        <div
          class="css-0"
          data-theme="light"
          style="height: 25px; width: 25px; border-color: #4cb3ff; border-width: 3px; border-radius: 50%; display: inline-block;"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`should successfully show legend for imageUrl configuration 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
  data-theme="light"
>
  <ul
    class="legend-layer-list css-bhb3xr"
    data-theme="light"
    role="list"
  >
    <li
      class="legend-item layer-layer-1 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          Layer 1
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-12ffw4m"
          data-theme="light"
          src="https://avatars.githubusercontent.com/u/121286957?s=200&v=4"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`shows legend entries for nested sublayers 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
  data-theme="light"
>
  <ul
    class="legend-layer-list css-bhb3xr"
    data-theme="light"
    role="list"
  >
    <li
      class="legend-item layer-c789d20c-4c90-4208-9b9a-97bf29c607a3 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          sublayer4_1
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-12ffw4m"
          data-theme="light"
          src="https://www.wms.nrw.de/gd/bk05l?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetLegendGraphic&FORMAT=image%2Fpng&SCALE=545978.7734655447&LAYERS=sublayer4_3%2Csublayer4_2%2Csublayer4_1&LAYER=sublayer4_1"
        />
      </div>
    </li>
    <li
      class="legend-item layer-3481bee8-dfed-4357-9180-982d8e7710e6 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          sublayer4_2
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-12ffw4m"
          data-theme="light"
          src="https://www.wms.nrw.de/gd/bk05l?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetLegendGraphic&FORMAT=image%2Fpng&SCALE=545978.7734655447&LAYERS=sublayer4_3%2Csublayer4_2%2Csublayer4_1&LAYER=sublayer4_2"
        />
      </div>
    </li>
    <li
      class="legend-item layer-dbe53053-d583-4629-9b29-acd35754cedf css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          sublayer4_3
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-12ffw4m"
          data-theme="light"
          src="https://www.wms.nrw.de/gd/bk05l?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetLegendGraphic&FORMAT=image%2Fpng&SCALE=545978.7734655447&LAYERS=sublayer4_3%2Csublayer4_2%2Csublayer4_1&LAYER=sublayer4_3"
        />
      </div>
    </li>
  </ul>
</div>
`;
